[Qt][WK2] http/tests/navigation/https-in-page-cache.html fails with timeout https://bugs.webkit.org/show_bug.cgi?id=83576

Patch by Michael Brüning <michael.bruning@nokia.com> on 2012-05-15
Reviewed by Simon Hausmann.

Source/WebKit2:

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
(QQuickWebViewPrivate::handleCertificateVerificationRequest):
(QQuickWebView::allowAnyHTTPSCertificateForLocalHost): Added.
(QQuickWebView::setAllowAnyHTTPSCertificateForLocalHost): Added.
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):  Added bool m_allowAnyHTTPSCertificateForLocalHost.

Tools:

Set the PlatformWebView for the Qt port to accept all SSL certificates.

* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::PlatformWebView::PlatformWebView):

LayoutTests:

Unskipped http/tests/navgiation/https-in-page-cache.html

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/104036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117045 268f45cc-cd09-0410-ab3c-d52691b4dbfc